--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,65 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
-    android:layout_height="750dp"
-    android:orientation="vertical">
+    android:layout_height="750dp">
+
 
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        map:layout_constraintBottom_toBottomOf="parent"
+        map:layout_constraintEnd_toEndOf="parent"
+        map:layout_constraintHorizontal_bias="1.0"
+        map:layout_constraintStart_toStartOf="parent"
+        map:layout_constraintTop_toTopOf="parent"
+        map:layout_constraintVertical_bias="1.0"
         tools:context=".MapsActivity" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="165dp"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        android:visibility="visible">
+    <TextView
+        android:id="@+id/textViewNbHotspots"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:height="50px"
+        android:text="nombre de hotspots"
+        map:layout_constraintBaseline_toBaselineOf="@+id/editText"
+        map:layout_constraintEnd_toStartOf="@+id/editText"
+        map:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/textViewNbHotspots"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:text="nombre de hotspots" />
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="280dp"
+        android:height="50px"
+        android:autofillHints=""
+        android:ems="10"
+        android:inputType="number"
+        map:layout_constraintBottom_toBottomOf="parent"
+        map:layout_constraintEnd_toEndOf="parent"
+        map:layout_constraintStart_toEndOf="@+id/textViewNbHotspots" />
 
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:autofillHints=""
-            android:ems="10"
-            android:inputType="number" />
+    <fragment
+        android:id="@+id/fragment"
+        android:name="com.datainparis.optionsBarFragment"
+        android:layout_width="283dp"
+        android:layout_height="96dp"
+        map:layout_constraintTop_toTopOf="parent" />
 
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="165dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textViewUseLocation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:text="TextView" />
-
-        <CheckBox
-            android:id="@+id/checkBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:text="CheckBox" />
-
-    </LinearLayout>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
