--- a/app/src/main/res/layout/fragment_bottom_bar.xml
+++ b/app/src/main/res/layout/fragment_bottom_bar.xml
@@ -8,12 +8,15 @@
 
     <Button
         android:id="@+id/buttonMap"
-        android:layout_width="208dp"
-        android:layout_height="40dp"
+        android:layout_width="214dp"
+        android:layout_height="39dp"
+        android:layout_marginLeft="-5dip"
+        android:layout_marginBottom="-5dip"
+        android:onClick="launchActivity"
+        android:tag="map"
         android:text="Map"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:onClick="launchActivity" android:tag="map"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/buttonCamera"
